// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSection > snapshot test - closed state with no selections 1`] = `
<div>
  <details
    class="
      border-b border-default
      last:border-0
    "
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between px-4 py-3 text-base
          font-medium text-default
          focus-within:bg-stripe
          hover:bg-stripe
          focus:outline-none
        "
    >
      <span
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="
              size-3 transition-transform
              [[open]>&]:rotate-90
            "
          fill="currentColor"
          viewBox="0 0 8 12"
        >
          <path
            d="M1.5 0L0 1.5 4.5 6 0 10.5 1.5 12 7.5 6z"
          />
        </svg>
        Genres
      </span>
    </summary>
    <div
      class="px-4 pb-3"
    >
      <div>
        Filter content here
      </div>
    </div>
  </details>
</div>
`;

exports[`FilterSection > snapshot test - closed state with selections 1`] = `
<div>
  <details
    class="
      border-b border-default
      last:border-0
    "
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between px-4 py-3 text-base
          font-medium text-default
          focus-within:bg-stripe
          hover:bg-stripe
          focus:outline-none
        "
    >
      <span
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="
              size-3 transition-transform
              [[open]>&]:rotate-90
            "
          fill="currentColor"
          viewBox="0 0 8 12"
        >
          <path
            d="M1.5 0L0 1.5 4.5 6 0 10.5 1.5 12 7.5 6z"
          />
        </svg>
        Release Year
      </span>
      <span
        class="
            text-sm text-subtle
            [[open]>&]:hidden
          "
      >
        (
        5
         selected)
      </span>
    </summary>
    <div
      class="px-4 pb-3"
    >
      <div>
        Year filter content
      </div>
    </div>
  </details>
</div>
`;

exports[`FilterSection > snapshot test - open state with selections 1`] = `
<div>
  <details
    class="
      border-b border-default
      last:border-0
    "
    open=""
  >
    <summary
      class="
          flex cursor-pointer items-center justify-between px-4 py-3 text-base
          font-medium text-default
          focus-within:bg-stripe
          hover:bg-stripe
          focus:outline-none
        "
    >
      <span
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="
              size-3 transition-transform
              [[open]>&]:rotate-90
            "
          fill="currentColor"
          viewBox="0 0 8 12"
        >
          <path
            d="M1.5 0L0 1.5 4.5 6 0 10.5 1.5 12 7.5 6z"
          />
        </svg>
        Genres
      </span>
      <span
        class="
            text-sm text-subtle
            [[open]>&]:hidden
          "
      >
        (
        2
         selected)
      </span>
    </summary>
    <div
      class="px-4 pb-3"
    >
      <div>
        Filter content here
      </div>
    </div>
  </details>
</div>
`;
